Fix random post button position on mobile

--- a/src/app/components/random-post-button/random-post-button.module.css
+++ b/src/app/components/random-post-button/random-post-button.module.css
@@ -13,6 +13,7 @@
   gap: 6px;
   white-space: nowrap;
   cursor: pointer;
+  margin-top: 8px;
 }
 
 .randomButton:hover {
@@ -36,6 +37,10 @@
 }
 
 @media (min-width: 510px) {
+  .randomButton {
+    margin-top: 0px;
+  }
+
   .randomButtonContainer {
     flex: initial;
     text-align: end;
